Refactored class names as conflicted with ruby class file.

--- a/views/files.erb
+++ b/views/files.erb
@@ -1,5 +1,6 @@
 <h2>Welcome</h2>
 
-<% @files.each do |file| %>
-  <%= file[name] %>
-<% end%>
+
+<% @data.metadata.each do |file| %>
+  <%= file['name']%>
+<% end %>
