--- a/views/files.erb
+++ b/views/files.erb
@@ -9,7 +9,7 @@
     <tr>
       <th>Category</th>
       <th>Number of files</th>
-      <th>Basic Weight</th>
+      <th>Basic Weight (Mb)</th>
     </tr>
   </thead>
   <% @data.all_categories.each do |category| %>
@@ -25,6 +25,11 @@
         </td>
       </tr>
   <% end %>
-
+<table>
+  <tr>
+    <th>Total basic weight (Mb): </th>
+    <td><%= @data.total_basic_weight %></td>
+  </tr>
+</table>
 
 </table>
