--- a/views/files.erb
+++ b/views/files.erb
@@ -9,7 +9,7 @@
     <tr>
       <th>Category</th>
       <th>Number of files</th>
-      <th>Basic Weight (Mb)</th>
+      <th>Basic Weight (MB)</th>
     </tr>
   </thead>
   <% @data.all_categories.each do |category| %>
@@ -27,8 +27,12 @@
   <% end %>
 <table>
   <tr>
-    <th>Total basic weight (Mb): </th>
+    <th>Total basic weight (MB): </th>
     <td><%= @data.total_basic_weight %></td>
+  </tr>
+  <tr>
+  <th>Gravity Displacement (MB): </th>
+  <td><%= @data.gravity_displacement %></td>
   </tr>
 </table>
 
