Attempted to test for user not authorised but failed. tests passing.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,20 +2,26 @@
   <head>
     <title>File Gravity</title>
     <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   </head>
   <body>
-  <% if flash[:next] %>
-    <span class="flash">
-      <%= flash[:next]%>
-    </span>
-  <% end %>
+    <% if flash[:next] %>
+      <span class="flash">
+        <%= flash[:next]%>
+      </span>
+    <% end %>
+
+    <% if flash[:error] %>
+      <span class="flash">
+        <%= flash[:error]%>
+      </span>
+    <% end %>
     <%= yield %>
   </body>
 </html>
