--- a/views/files.erb
+++ b/views/files.erb
@@ -4,7 +4,7 @@
   <input type="submit" class="button" value="Logout">
 </form>
 
-<table>
+<table id="data">
   <thead>
     <tr>
       <th>Category</th>
