--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <h1>File Gravity</h1>
 <h3>Please sign in:</h3>
-<form class="login" action="/session" method="POST">
+<form id="login" action="/session" method="POST">
   <input type="text" placeholder="Email Address" name="email">
   <input type="password" placeholder="Password" name="password">
   <input type="submit" class="button" value="Login">
