test for restircted access passing

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,6 +11,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   </head>
   <body>
+
+  <h1>File Gravity</h1>
     <% if flash[:next] %>
       <span class="flash">
         <%= flash[:next]%>
