css styling. add partials gem to render pages.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,29 +1,33 @@
-<html>
+<!-- DOCTYPE html -->
+<html lang='en'>
   <head>
     <title>File Gravity</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
+    <!-- Google Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600|Montserrat' rel='stylesheet' type='text/css'>
+
+    <!-- Font-awesome -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="stylesheets/main.css" type="text/css" />
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   </head>
   <body>
 
-  <h1>File Gravity</h1>
-    <% if flash[:next] %>
-      <span class="flash">
-        <%= flash[:next]%>
-      </span>
-    <% end %>
+  <div class='container-fluid'>
+      <h1>File Gravity</h1>
 
-    <% if flash[:error] %>
-      <span class="flash">
-        <%= flash[:error]%>
-      </span>
-    <% end %>
-    <%= yield %>
+      <%= partial :flash%>
+      <%= yield %>
+      <%= partial :footer%>
+
+    </div>
+
   </body>
 </html>
