--- a/views/files.erb
+++ b/views/files.erb
@@ -1,10 +1,12 @@
-<h2>Welcome, <%= session[:email]%></h2>
-<form id="logout" method="POST" action="/session">
-  <input type="hidden" name="_method" value="delete">
-  <input type="submit" class="button" value="Logout">
-</form>
+<span id='nav'>
+  <h3>Welcome, <%= session[:email]%></h3>
+  <form id="logout" method="POST" action="/session">
+    <input type="hidden" name="_method" value="delete">
+    <input type="submit" class="btn btn-default" value="Logout">
+  </form>
+</span>
 
-<table id="data">
+<table class='table'>
   <thead>
     <tr>
       <th>Category</th>
@@ -13,19 +15,20 @@
     </tr>
   </thead>
   <% @data.all_categories.each do |category| %>
-      <tr>
-        <td>
-          <%= category.capitalize %>
-        </td>
-        <td>
-          <%= @data.count(category) %>
-        </td>
-        <td>
-          <%= @data.basic_weight(category) %>
-        </td>
-      </tr>
+    <tr>
+      <td>
+        <%= category.capitalize %>
+      </td>
+      <td>
+        <%= @data.count(category) %>
+      </td>
+      <td>
+        <%= @data.basic_weight(category) %>
+      </td>
+    </tr>
   <% end %>
-<table>
+</table>
+<table class='table'>
   <tr>
     <th>Total basic weight (MB): </th>
     <td><%= @data.total_basic_weight %></td>
@@ -36,4 +39,4 @@
   </tr>
 </table>
 
-</table>
+
