--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,9 @@
 <h3>Please sign in:</h3>
-<form id="login" action="/session" method="POST">
-  <input type="text" placeholder="Email Address" name="email">
-  <input type="password" placeholder="Password" name="password">
-  <input type="submit" class="button" value="Login">
+
+<form class='form-inline' action="/session" method="POST">
+  <div class='form-group'>
+    <input type="text" class="form-control" placeholder="Email Address" name="email">
+    <input type="password" class="form-control" placeholder="Password" name="password">
+    <input type="submit" class="btn btn-default" value="Login">
+  </div>
 </form>
