--- a/views/error.erb
+++ b/views/error.erb
@@ -1,1 +1,1 @@
-<h2>Whoops! Something went wrong. Go back <a href="/">home?</a></h2>
+<h2>Whoops! I think your email address or password was incorrect. <a href="/">Try again?</a></h2>
