Change wording on footer

--- a/views/footer.erb
+++ b/views/footer.erb
@@ -1,3 +1,3 @@
 <footer>
-  <p>Website powered by <a href="http://www.workshare.com/resources/developers">Workshare API</a>. </p>
+  <p>Powered by <a href="http://www.workshare.com/resources/developers">Workshare API</a>. </p>
 </footer>
